--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18727,6 +18727,9 @@ Xiaomi:
     - regex: 'joyeuse(?:[);/ ]|$)'
       model: 'Redmi Note 9 Pro'
       device: 'phablet'
+    - regex: 'joyeuse(?:[);/ ]|$)'
+      model: 'Redmi Note 9 Pro'
+      device: 'phablet'
     - regex: 'M2101K7A[GI]'
       model: 'Redmi Note 10'
       device: 'phablet'
@@ -19516,9 +19519,93 @@ Zenek:
     - regex: 'Z5516'
       model: 'Zebra'
 
+# Nubia (www.nubia.com)
+Nubia:
+  regex: 'Nubia[ _]|(?:NX(?:403A|404H|406E|40[X2]|503A|50[5678]J|51[0123]J|521J|523J_V1|529Jq?|5[345]1J|5[48]9J|569[HJ]|5[67]3J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|6[126]9J|907J))(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'NX669J'
+      model: 'Red Magic 6'
+    - regex: 'NX619J'
+      model: 'Red Magic Mars'
+    - regex: 'NX629J'
+      model: 'Red Magic 3'
+    - regex: 'NX40[X2]'
+      model: 'Z5 Mini'
+    - regex: 'NX(403[AE]|406E|404H)'
+      model: 'Z5S Mini'
+    - regex: 'NX503A'
+      model: 'Z5S'
+    - regex: 'NX506J'
+      model: 'Z7'
+    - regex: 'NX507J'
+      model: 'Z7 Mini'
+    - regex: 'NX505J'
+      model: 'Z7 Max'
+    - regex: 'NX508J'
+      model: 'Z9'
+    - regex: '(NX5[12]1J|Nubia Z9 mini)'
+      model: 'Z9 Mini'
+    - regex: '(NX510J|Nubia Z9 Max)'
+      model: 'Z9 Max'
+    - regex: 'NX512J'
+      model: 'Z9 Max Dual'
+    - regex: 'NX531J'
+      model: 'Z11'
+    - regex: 'NX523J_V1'
+      model: 'Z11 Max'
+    - regex: '(?:NX549J|Nubia Z11 mini S)'
+      model: 'Z11 Mini S'
+    - regex: '(?:NX529Jq?|Nubia Z11 mini)'
+      model: 'Z11 Mini'
+    - regex: 'NX606J'
+      model: 'Z18'
+    - regex: 'NX616J'
+      model: 'Z18S'
+    - regex: 'NX611J'
+      model: 'Z18 Mini'
+    - regex: 'NX551J'
+      model: 'M2'
+    - regex: 'NX563J'
+      model: 'Z17'
+    - regex: 'NX569[HJ]'
+      model: 'Z17 Mini'
+    - regex: 'NX589J'
+      model: 'Z17 Mini S'
+    - regex: 'NX591J'
+      model: 'Z17 Lite'
+    - regex: 'NX595J'
+      model: 'Z17S'
+    - regex: 'NX612J'
+      model: 'V18'
+    - regex: 'NX627J'
+      model: 'Z20'
+    - regex: 'NX513J'
+      model: 'My Prague'
+    - regex: 'NX601J'
+      model: 'X6'
+    - regex: 'NX609J'
+      model: 'Red Magic'
+    - regex: 'NX659J'
+      model: 'Red Magic 5G'
+    - regex: 'NX651J'
+      model: 'Play'
+    - regex: 'NX573J'
+      model: 'M2 Lite'
+    - regex: 'NX907J'
+      model: 'M2 Play'
+    - regex: 'NX541J'
+      model: 'N1'
+    - regex: 'NX597J'
+      model: 'N1 Lite'
+    - regex: 'NX575J'
+      model: 'N2'
+    - regex: 'NX6(?:08|17)J'
+      model: 'N3'
+
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|503A|50[5678]J|51[0123]J|521J|523J_V1|529Jq?|5[345]1J|5[48]9J|569[HJ]|5[67]3J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A00[13]ZT|Z-01K|UZTE (?:GRAND V7|V808)|ZR01|ZTG01|K8[37]CA|VERGATARIO ?5(?:PLUS)?|Axon mini)(?:[);/ ]|$)'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A00[13]ZT|Z-01K|UZTE (?:GRAND V7|V808)|ZR01|ZTG01|K8[37]CA|VERGATARIO ?5(?:PLUS)?|Axon mini)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -19604,82 +19691,6 @@ ZTE:
       model: 'Max XL'
     - regex: 'N9810(?:[);/ ]|$)'
       model: 'Vital'
-    - regex: 'NX40[X2](?:[);/ ]|$)'
-      model: 'Nubia Z5 Mini'
-    - regex: 'NX(403[AE]|406E|404H)(?:[);/ ]|$)'
-      model: 'Nubia Z5S Mini'
-    - regex: 'NX503A(?:[);/ ]|$)'
-      model: 'Nubia Z5S'
-    - regex: 'NX506J(?:[);/ ]|$)'
-      model: 'Nubia Z7'
-    - regex: 'NX507J(?:[);/ ]|$)'
-      model: 'Nubia Z7 Mini'
-    - regex: 'NX505J(?:[);/ ]|$)'
-      model: 'Nubia Z7 Max'
-    - regex: 'NX508J(?:[);/ ]|$)'
-      model: 'Nubia Z9'
-    - regex: '(NX5[12]1J|Nubia Z9 mini)(?:[);/ ]|$)'
-      model: 'Nubia Z9 Mini'
-    - regex: '(NX510J|Nubia Z9 Max)(?:[);/ ]|$)'
-      model: 'Nubia Z9 Max'
-    - regex: 'NX512J(?:[);/ ]|$)'
-      model: 'Nubia Z9 Max Dual'
-    - regex: 'NX531J(?:[);/ ]|$)'
-      model: 'Nubia Z11'
-    - regex: 'NX523J_V1'
-      model: 'Nubia Z11 Max'
-    - regex: '(?:NX549J|Nubia Z11 mini S)(?:[);/ ]|$)'
-      model: 'Nubia Z11 Mini S'
-    - regex: '(?:NX529Jq?|Nubia Z11 mini)(?:[);/ ]|$)'
-      model: 'Nubia Z11 Mini'
-    - regex: 'NX606J(?:[);/ ]|$)'
-      model: 'Nubia Z18'
-    - regex: 'NX616J(?:[);/ ]|$)'
-      model: 'Nubia Z18S'
-    - regex: 'NX611J(?:[);/ ]|$)'
-      model: 'Nubia Z18 Mini'
-    - regex: 'NX551J(?:[);/ ]|$)'
-      model: 'Nubia M2'
-    - regex: 'NX563J(?:[);/ ]|$)'
-      model: 'Nubia Z17'
-    - regex: 'NX569[HJ](?:[);/ ]|$)'
-      model: 'Nubia Z17 Mini'
-    - regex: 'NX589J(?:[);/ ]|$)'
-      model: 'Nubia Z17 Mini S'
-    - regex: 'NX591J(?:[);/ ]|$)'
-      model: 'Nubia Z17 Lite'
-    - regex: 'NX595J(?:[);/ ]|$)'
-      model: 'Nubia Z17S'
-    - regex: 'NX612J(?:[);/ ]|$)'
-      model: 'Nubia V18'
-    - regex: 'NX627J'
-      model: 'Nubia Z20'
-    - regex: 'NX513J(?:[);/ ]|$)'
-      model: 'Nubia My Prague'
-    - regex: 'NX601J(?:[);/ ]|$)'
-      model: 'Nubia X6'
-    - regex: 'NX609J(?:[);/ ]|$)'
-      model: 'Nubia Red Magic'
-    - regex: 'NX659J(?:[);/ ]|$)'
-      model: 'Nubia Red Magic 5G'
-    - regex: 'NX651J(?:[);/ ]|$)'
-      model: 'Nubia Play'
-    - regex: 'NX619J(?:[);/ ]|$)'
-      model: 'Nubia Red Magic Mars'
-    - regex: 'NX629J(?:[);/ ]|$)'
-      model: 'Nubia Red Magic 3'
-    - regex: 'NX573J'
-      model: 'Nubia M2 Lite'
-    - regex: 'NX907J(?:[);/ ]|$)'
-      model: 'Nubia M2 Play'
-    - regex: 'NX541J'
-      model: 'Nubia N1'
-    - regex: 'NX597J'
-      model: 'Nubia N1 Lite'
-    - regex: 'NX575J'
-      model: 'Nubia N2'
-    - regex: 'NX6(08|17)J(?:[);/ ]|$)'
-      model: 'Nubia N3'
     - regex: '[UV]9180(?:[);/ ]|$)'
       model: 'V5 Red Bull'
     - regex: '[UV]9815(?:[);/ ]|$)'
