--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -2878,3 +2878,21 @@
     model: Xpress Smartlife M77QF6
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 8.1.0; TEL-1014GIQ Build/OPM2.171019.012; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/93.0.4577.62 Mobile Safari/537.36 OPR/59.0.2254.59153
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    version: 59.0.2254.59153
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Telefunken
+    model: TEL-1014GIQ
+  os_family: Android
+  browser_family: Opera
